--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <img src="about.jpg" alt="Flower" class="img-fluid" >
+            <img src="img/about/about-1.jpg" alt="Flower" class="img-fluid" >
           </div>
           <div class="col-lg-6">
             <h2>About Us</h2>
@@ -134,7 +134,7 @@
                   <div class="row">
                     <div class="col-lg-8 offset-lg-2">
                       <div class="testimonial-item">
-                        <img src="flower-tst2.jpg" class="img-fluid" alt="" style="border-radius: 50%; border: 2px solid black; height:100px; width:100px;">
+                        <img src="img/test/test-1.jpg" class="img-fluid" alt="" style="border-radius: 50%; border: 2px solid black; height:100px; width:100px;">
                         <p>"I absolutely love the beautiful arrangements from Flower Shop. The flowers are always fresh and the designs are stunning!"</p>
                         <p class="author">- Emily Smith</p>
                       </div>
@@ -147,7 +147,7 @@
                   <div class="row">
                     <div class="col-lg-8 offset-lg-2">
                       <div class="testimonial-item">
-                        <img src="flower-tst.jpg" class="img-fluid" alt="" style="border-radius: 50%; border: 2px solid black; height:100px; width:100px;">
+                        <img src="img/test/test-2.jpg" class="img-fluid" alt="" style="border-radius: 50%; border: 2px solid black; height:100px; width:100px;">
                         <p>"Flower Shop has the best customer service. They helped me choose the perfect flowers for my wedding and delivered them on time. Highly recommended!"</p>
                         <p class="author">- John Davis</p>
                       </div>
@@ -160,7 +160,7 @@
                   <div class="row">
                     <div class="col-lg-8 offset-lg-2">
                       <div class="testimonial-item">
-                        <img src="flower1-tst.jpg" class="img-fluid" alt="" style="border-radius: 50%; border: 2px solid black; height:100px; width:100px;">
+                        <img src="img/test/test-3.jpg" class="img-fluid" alt="" style="border-radius: 50%; border: 2px solid black; height:100px; width:100px;">
                         <p>"I've been a loyal customer of Flower Shop for years. Their arrangements never disappoint and always bring a smile to my face."</p>
                         <p class="author">- Sarah Johnson</p>
                       </div>
