--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     <!-- Navbar goes here -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top ">
         <div class="container">
-          <a class="navbar-brand" href="#">Flower Shop</a>
+         <a class="navbar-brand" href="#"><img src="img/logo/nav-logo.png" alt="" width="" height="48px" class="d-inline-block align-text-top">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
