--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
           </div>
           <div class="col-lg-6">
             <h2>About Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque at sapien auctor rutrum. Etiam volutpat eget dui non dignissim. Donec tincidunt, dolor non lacinia efficitur, lorem velit condimentum nisl, id ultrices est eros ut lectus.</p>
-          <img src="img/about/about-2.jpg" class="img-fluid" height="250px" width="250px" alt="">
+             <p>Flowering plants are plants that bear flowers and fruits, and form the clade Angiospermae, commonly called angiosperms. They include all forbs, grasses and grass-like plants, a vast majority of broad-leaved trees, shrubs & vines, and most aquatic plants.</p>
+            <img src="img/about/about-2.jpg" class="img-fluid" height="250px" width="250px" alt="">
           </div>
         </div>
       </div>
@@ -319,8 +319,8 @@
             <div class="col-md-3">
               <div class="footer-column">
                 <h4>About Us</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in turpis at sem fermentum bibendum nec ut mauris.</p>
-              </div>
+                <p>Flowering plants are plants that bear flowers and fruits, and form the clade Angiospermae, commonly called angiosperms. They include all forbs, grasses and grass-like plants, a vast majority of broad-leaved trees, shrubs & vines, and most aquatic plants.</p>
+           </div>
             </div>
             <div class="col-md-3">
               <div class="footer-column">
