--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <img src="img/about/about-1.jpg" alt="Flower" class="img-fluid" >
           </div>
           <div class="col-lg-6">
-            <h2>About Us</h2>
+            <h2>About Plants</h2>
              <p>Flowering plants are plants that bear flowers and fruits, and form the clade Angiospermae, commonly called angiosperms. They include all forbs, grasses and grass-like plants, a vast majority of broad-leaved trees, shrubs & vines, and most aquatic plants.</p>
             <img src="img/about/about-2.jpg" class="img-fluid" height="250px" width="250px" alt="">
           </div>
@@ -318,7 +318,7 @@
           <div class="row">
             <div class="col-md-3">
               <div class="footer-column">
-                <h4>About Us</h4>
+                <h4>About Plants</h4>
                 <p>Flowering plants are plants that bear flowers and fruits, and form the clade Angiospermae, commonly called angiosperms. They include all forbs, grasses and grass-like plants, a vast majority of broad-leaved trees, shrubs & vines, and most aquatic plants.</p>
            </div>
             </div>
