--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="row">
           <div class="col-lg-6 offset-lg-3">
             <div class="hero-content" style="margin-top:4em;">
-              <h1>Welcome to Flower Shop</h1>
+              <h1 style="color: #9f0983; font-size:34px;"><span style="color:white; background-color: #9f0983; padding:5px;">Welcome to</span> Flower Shop</h1>
               <p>Discover the beauty of flowers and find the perfect arrangement for any occasion.</p>
               <a href="#" class="btn btn-primary">Shop Now</a>
             </div>
@@ -117,7 +117,7 @@
             <img src="img/about/about-1.jpg" alt="Flower" class="img-fluid" >
           </div>
           <div class="col-lg-6">
-            <h2>About Plants</h2>
+           <h2>About <span style="color:#9f0983"> Plants</span></h2>
              <p>Flowering plants are plants that bear flowers and fruits, and form the clade Angiospermae, commonly called angiosperms. They include all forbs, grasses and grass-like plants, a vast majority of broad-leaved trees, shrubs & vines, and most aquatic plants.</p>
             <img src="img/about/about-2.jpg" class="img-fluid" height="250px" width="250px" alt="">
           </div>
