--- a/index.html
+++ b/index.html
@@ -273,15 +273,15 @@
                   <form action="#" method="POST" class="mt-4">
                     <div class="mb-3">
                       <label for="name" class="form-label">Your Name</label>
-                      <input type="text" class="form-control" id="name" name="name" required>
+                      <input type="text" class="form-control" id="name" name="name" required required style="color:white;"   onfocus="myFunction(this)">
                     </div>
                     <div class="mb-3">
                       <label for="email" class="form-label">Your Email</label>
-                      <input type="email" class="form-control" id="email" name="email" required>
+                      <input type="email" class="form-control" id="email" name="email" required required style="color:white;"   onfocus="myFunction(this)">
                     </div>
                     <div class="mb-3">
                       <label for="message" class="form-label">Message</label>
-                      <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+                      <textarea class="form-control" id="message" name="message" rows="5" required required style="color:white;"   onfocus="myFunction(this)"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary" style="background-color: #ff9bb9;">Submit</button>
                   </form>
@@ -353,6 +353,11 @@
           </div>
         </div>
       </footer>
+      <script>
+        function myFunction(x) {
+          x.style.background = "#9f0983";
+        }
+        </script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
