--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="hero-content" style="margin-top:4em;">
               <h1 style="color: #9f0983; font-size:34px;"><span style="color:white; background-color: #9f0983; padding:5px;">Welcome to</span> Flower Shop</h1>
               <p>Discover the beauty of flowers and find the perfect arrangement for any occasion.</p>
-              <a href="#" class="btn btn-primary">Shop Now</a>
+              <a href="#" class="btn btn-primary" style="background-color:#9f0983" >Shop Now</a>
             </div>
           </div>
         </div>
@@ -283,7 +283,7 @@
                       <label for="message" class="form-label">Message</label>
                       <textarea class="form-control" id="message" name="message" rows="5" required required style="color:white;"   onfocus="myFunction(this)"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary" style="background-color: #ff9bb9;">Submit</button>
+                    <button type="submit" class="btn btn-primary" style="background-color:#9f0983">Submit</button>
                   </form>
                 </div>
                 
