--- a/index.html
+++ b/index.html
@@ -191,21 +191,21 @@
             <div class="row">
               <div class="col-lg-4 col-md-6" style="text-align: center;">
                 <div class="service-item">
-                  <img src="img/services/service-1.jpg" class="img-fluid" style="height:300px; width: 300px; border: #ff9bb9 5px solid; padding: 5px;" alt="Service 1">
+                  <img src="img/services/service-1.jpg" class="img-fluid" style="height:300px; width: 300px; border:#9f0983 5px solid; padding: 5px;" alt="Service 1">
                   <h3><span style="color:#9f0983"> Wedding</span> Arrangements</h3>
                   <p>We provide beautiful floral arrangements for weddings, tailored to your preferences and themes.</p>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6" style="text-align: center;">
                 <div class="service-item">
-                  <img src="img/services/service-2.jpg" class="img-fluid" style="height:300px; width: 300px; border: #ff9bb9 5px solid; padding:5px;" alt="Service 2">
+                  <img src="img/services/service-2.jpg" class="img-fluid" style="height:300px; width: 300px; border:#9f0983 5px solid; padding:5px;" alt="Service 2">
                   <h3><span style="color:#9f0983">Special </span>Occasions</h3>
                   <p>Make special occasions even more memorable with our stunning floral designs.</p>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6" style="text-align: center;">
                 <div class="service-item">
-                  <img src="img/services/service-3.jpg" class="img-fluid" style="height:300px; width: 300px; border: #ff9bb9 5px solid; padding: 5px;" alt="Service 3">
+                  <img src="img/services/service-3.jpg" class="img-fluid" style="height:300px; width: 300px; border:#9f0983 5px solid; padding: 5px;" alt="Service 3">
                  <h3>Flower <span style="color:#9f0983"> Delivery</span></h3>
                   <p>Enjoy the convenience of flower delivery services for gifts, celebrations, and more.</p>
                 </div>
